manifest/infrastructure/traefik/local/strip.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
spec:
  stripPrefixRegex:
    regex:
      - ^/[^/]+
