manifest/infrastructure/traefik/local/http-redirect-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: catch-all-http
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: HostRegexp(`^.+$`)
      priority: -10000
      middlewares:
        - name: https-redirect
      # ここで指定したサービスは使われない
      services:
        - kind: TraefikService
          name: api@internal
